[metadata]
name=pytest-verifun
version = 0.1.0
author = Ryan J. Miller
author_email = rjmiller10@gmail.com
maintainer = Ryan J. Miller
maintainer_email = rjmiller10@gmail.com
license = MIT
url = https://github.com/rjmill/pytest-verifun
description = An alternative way to parametrize test cases
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
py_modules = pytest_verifun
install_requires =
    pytest>=4.6.0

[options.entry_points]
pytest11 =
    verifun = pytest_verifun

[mypy]
disallow_untyped_defs = True

# Warn us if there's anything we can get rid of.
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
