[metadata]
name=pytest-funparam
version = 0.1.0
author = Ryan J. Miller
author_email = rjmiller10@gmail.com
maintainer = Ryan J. Miller
maintainer_email = rjmiller10@gmail.com
license = MIT
url = https://github.com/rjmill/pytest-funparam
description = An alternative way to parametrize test cases
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
# Treat src/ as the root of the package.
package_dir =
    =src
# The normal package finder doesn't pick up single-file modules. We need to use
# py_modules instead.
py_modules = pytest_funparam

python_requires = >=3.6
install_requires =
    pytest>=4.6.0

[options.entry_points]
pytest11 =
    funparam = pytest_funparam

[mypy]
disallow_untyped_defs = True

# Warn us if there's anything we can get rid of.
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
