[metadata]
name=pytest-funparam
version = 0.2.0
author = Ryan J. Miller
author_email = rjmiller10@gmail.com
maintainer = Ryan J. Miller
maintainer_email = rjmiller10@gmail.com
license = MIT
url = https://github.com/rjmill/pytest-funparam
description = An alternative way to parametrize test cases
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]

packages = pytest_funparam
# Treat src/ as the root of the package.
package_dir =
    =src

python_requires = >=3.6
install_requires =
    pytest>=4.6.0

zip_safe = no


[options.package_data]
pytest_funparam = py.typed


[options.entry_points]
pytest11 =
    funparam = pytest_funparam

[mypy]
disallow_untyped_defs = True

# Warn us if there's anything we can get rid of.
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
